# tsr-zoo

./: .gitignore  README.md  parameters.yaml  requirements.txt  robocik.drawio
ScriptsRunners/: WidgetsTest.ipynb  chatter_hardware_monitor.ipynb  init.ipynb  listener_activity_log.ipynb  listener_position_log.ipynb  server_catapult.ipynb  server_hardware_monitor.ipynb  server_movment.ipynb  server_route_planner.ipynb  test.ipynb  test_client_catapult.ipynb
rosbag/: 2022-06-07-22-13-27.bag  2022-06-07-22-13-55.bag
src/: catapult.py  logger.py
src/catapult/: CMakeLists.txt  package.xml
src/catapult/scripts/: TEST_catapuls_client.py  catapult_server.py  chatt_test_activity.py
src/catapult/srv/: CatapultData.srv
src/data_exchange_controller/: CMakeLists.txt  package.xml
src/hardware_monitor/: CMakeLists.txt  package.xml
src/hardware_monitor/scripts/: chatt_test_position.py
src/loggers/: CMakeLists.txt  package.xml
src/loggers/msg/: SingleLog.msg  SingleLogPosition.msg
src/loggers/scripts/: activity_log_server.py  position_log_server.py
src/movement/: package.xml
src/msgPack/: CMakeLists.txt  package.xml
src/msgPack/msg/: GeoPosition.msg
src/route_planner/: CMakeLists.txt  package.xml
src/task_controller/: CMakeLists.txt  package.xml
src/zoo_bot/: CMakeLists.txt  package.xml
src/zoo_bot/msg/: HardwareData.msg  LanuchInfo.msg  SensorData.msg  SingleLogPosition.msg
src/zoo_bot/scripts/: TEST_catapuls_client.py  TEST_chatt_activity.py  TEST_chatt_position.py  activity_log_server.py  chatter_hardware_monitor.py  listener_activity_log.py  listener_position_log.py  server_catapult.py  server_hardware_monitor.py  server_movment.py  server_route_planner.py
src/zoo_bot/srv/: CatapultData.srv  HardwareReq.srv  Move.srv  RoutePlanner.srv
src/zoo_bot_tester/: CMakeLists.txt  package.xml
src/zoo_bot_tester/scripts/: control_catapult.py
src/zoo_bot_tester/srv/: CatapultRequest.srv
src/zoobot/: CMakeLists.txt  package.xml
