<?xml version="1.0"?>
<package format="2">
  <name>catapult</name>
  <version>1.0.0</version>
  <description>The catapult package</description>

  <maintainer email="234306@edu.p.lodz.pl">Mateusz Żyszkiewicz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>loggers</build_depend>
  <exec_depend>loggers</exec_depend>
  <build_depend>msgPack</build_depend>
  <exec_depend>msgPack</exec_depend>
  <export></export>
</package>
