<?xml version="1.0"?>
<package format="2">
  <name>zoo_bot_tester</name>
  <version>1.0.0</version>
  <description>The zoo_bot_tester package</description>

  <maintainer email="zoo_bot@todo.todo">a minecraft player</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zoo_bot</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>zoo_bot</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>zoo_bot</exec_depend>

  <export></export>
</package>
